# azure-cosmos-client-engine

./: .envrc  .gitignore  BUILD_SYSTEM.md  CHANGELOG.md  Cargo.toml  Justfile  Makefile  README.md  azure-cosmos-client-engine.code-workspace  azure-cosmos-client-engine.sln  azure-pipelines-release.yml  azure-pipelines.yml  cbindgen.toml  cspell.json  devenv.nix  docker-compose.yml  justfile  log.txt  package-lock.json  rust-toolchain.internal.toml  rust-toolchain.toml
.cargo/: config.toml  microsoft-internal.config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml
artifacts/: cosmos_client_engine.h
azure_data_cosmos_client_engine/: Cargo.toml  build.rs
azure_data_cosmos_client_engine/src/: c_api.rs  lib.rs
azure_data_cosmos_client_engine/src/c_api/: mod.rs  result.rs
azure_data_cosmos_engine/: Cargo.toml
azure_data_cosmos_engine/benches/: query_result_deserialization.rs  throughput.rs
azure_data_cosmos_engine/query-tests/: Cargo.toml
azure_data_cosmos_engine/query-tests/src/: lib.rs  runner.rs
azure_data_cosmos_engine/src/: error.rs  hash.rs  lib.rs  murmur_hash.rs
azure_data_cosmos_engine/src/query/: aggregators.rs  engine.rs  mod.rs  node.rs  pipeline.rs  plan.rs  producer.rs  query_result.rs
azure_data_cosmos_engine/src/query/producer/: hybrid.rs  mod.rs  non_streaming.rs  read_many.rs  sorting.rs  state.rs  streaming.rs  unordered.rs
azure_data_cosmos_engine/src/query/producer/hybrid/: component_state.rs  fusion.rs  mod.rs  models.rs
azure_data_cosmos_engine/tests/: pipeline_basic_queries.rs  pipeline_limiting.rs  pipeline_range_filtering.rs  pipeline_read_many.rs  pipeline_streaming_order_by.rs  query_baseline_tests.rs
azure_data_cosmos_engine/tests/baseline_runner/: mod.rs
azure_data_cosmos_engine/tests/mock_engine/: mod.rs
azure_data_cosmos_transport/: Cargo.toml
azure_data_cosmos_transport/src/: lib.rs  main.rs  resource_context.rs
azure_data_cosmos_transport/src/pipeline/: authorization_policy.rs  mod.rs  signature_target.rs
baselines/: README.md
baselines/baseline-generator/: BaselineGenerator.cs  Program.cs  baseline-generator.csproj
baselines/queries/: aggregates.json  hybrid.json  order_by.json  vector.json
baselines/queries/aggregates/: average_price.results.json  average_where.results.json  count_all.results.json  count_with_where.results.json  max_price.results.json  max_where.results.json  min_price.results.json  min_where.results.json  sum_price.results.json  sum_where.results.json
baselines/queries/hybrid/: offset_limit.results.json  offset_limit_rrf.results.json  offset_limit_rrf_ft_with_vector.results.json  offset_limit_rrf_unfiltered.results.json  top_10_by_fulltext_rank.results.json  top_10_rrf.results.json  top_20_rrf.results.json
baselines/results/: README.md  order_by.streaming_order_by_1.json
baselines/testdata/: sqlSampleData.json  vectorTestData.json
benchmarks/go/: benchmark_test.go  cgo_overhead_test.go  go.mod  go.sum
benchmarks/rust/: Cargo.toml
benchmarks/rust/benches/: throughput.rs
benchmarks/rust/src/: main.rs
cosmoscx/: Cargo.toml  build.rs
cosmoscx/src/: diag.rs  lib.rs  partition_key.rs  pipeline.rs  result.rs  slice.rs
docs/: ARCHITECTURE.md  FFIAndMemorySafety.md
engine/: Cargo.toml  pyproject.toml
engine/src/: error.rs  lib.rs  python.rs
engine/src/c_api/: diag.rs  mod.rs  pipeline.rs  result.rs  slice.rs
engine/src/python/: mod.rs
engine/src/query/: merge_strategy.rs  mod.rs  node.rs  pipeline.rs  plan.rs  producer.rs  query_result.rs  value.rs
engine/tests/: pipeline_basic_queries.rs  pipeline_limiting.rs  pipeline_streaming_order_by.rs
engine/tests/mock_engine/: mod.rs
go/azcosmoscx/: build_dynamic.go  build_dynamic_windows.go  build_local_darwin_amd64.go  build_local_darwin_arm64.go  build_local_linux_amd64.go  build_local_linux_arm64.go  build_local_windows_amd64.go  build_musl_local_linux_amd64.go  build_musl_local_linux_arm64.go  build_musl_vendored_linux_amd64.go  build_musl_vendored_linux_arm64.go  build_vendored_darwin_amd64.go  build_vendored_darwin_arm64.go  build_vendored_linux_amd64.go  build_vendored_linux_arm64.go  build_vendored_windows_amd64.go  engine.go  engine_test.go  error.go  go.mod  go.sum  panic.go  panic_test.go  pipeline.go  pipeline_test.go  utils.go
go/engine/: engine.go  engine_test.go  error.go  go.mod  go.sum  pipeline.go  pipeline_test.go  utils.go
go/integration-tests/: go.mod  go.sum  integration_test.go  order_by_test.go  query_test.go  vector_test.go
go/sample/: asan_disabled.go  asan_enabled.go  go.mod  go.sum  main.go
include/: cosmoscx.h
nodejs/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  sample.js
nodejs/__test__/: index.spec.mjs
nodejs/src/: lib.rs
nodejs/x86_64-unknown-linux-gnu/: index.js
python/: Cargo.toml  benchmark.py  dev-requirements.txt  pyproject.toml  sample.py
python/azure_cosmoscx/: __init__.py  _azure_cosmoscx.pyi  query_engine.py
python/benchmarks/: README.md  __init__.py  config.py  test_throughput.py  utils.py
python/sample/: main.py
python/src/: lib.rs  pipeline.rs  query_clause.rs
python/test/: test_config.py  test_engine_version.py  test_pipeline.py
python/test/baseline/: README.md  test_order_by.py
python/test/query-tests/: run_integration.py  test_order_by.py
script/: bootstrap  bootstrap.ps1  check-deps  check-deps.ps1  check-headers  check-headers.ps1  codespace-oncreate  create-resources  docs-server  fmt  get-test-environment  load-sample-data  pipeline-template.yml  reset-emulator  start-emulator  trust-emulator-cert
script/bicep/: test-resources.bicep
script/helpers/: Cosmos-Emulator.ps1  Get-CurrentVersion.ps1  Update-Version.ps1  build_utils.py  load-sample-data.py  post-process-shared-lib.ps1  strip-binary  update-dylib-name  update-dylib-name.ps1  write-pkg-config.ps1  write-pkg-config.sh
script/just/: targets.just  variables.just
script/pipelines/: build-job.yml  ci.yml  emulator-setup.yml  pipeline-template.yml  prep-agent.yml
(+23 files in other folders)
