[package]
name = "azure_data_cosmos_engine"
description = "Azure Cosmos DB Client Engine"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
azure_data_cosmos = { workspace = true, optional = true }
azure_core = { workspace = true, optional = true }

[features]
# We want to keep pyo3 code separate and in the Python module, but if we do that, we can't derive conversion traits like FromPyObject/IntoPyObject in this crate.
# So, we do use pyo3 here, but only for those conversion traits, and it's behind this feature (which is enabled by the python module).
default = ["query_engine"]
query_engine = ["dep:azure_data_cosmos", "dep:azure_core", "azure_data_cosmos/preview_query_engine"]
python_conversions = ["dep:pyo3"]

[dev-dependencies]
pretty_assertions = "1.4.1"

# TODO: Move to published dependencies once we've got the API stable.
azure_core.workspace = true
azure_identity.workspace = true
azure_data_cosmos = { workspace = true, features = ["key_auth"] }
uuid.workspace = true
futures.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
