[package]
name = "cosmoscx"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
azure_data_cosmos_engine = { path = "../azure_data_cosmos_engine", default-features = false}
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true