[package]
name = "azure_cosmoscx"
description = "Azure Cosmos DB Client Engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# TODO: We depend on features in an unreleased version of PyO3, but the 0.24 release should be coming soon 🤞, see https://github.com/PyO3/pyo3/issues/4905
pyo3 = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
cbindgen = { workspace = true, optional = true }

[features]
# Builds the C API
c_api = ["dep:cbindgen"]
python = ["dep:pyo3", "pyo3/extension-module"]

[dev-dependencies]
pretty_assertions = "1.4.1"
