[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "azure-cosmoscx"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
# TODO: Move this in to the 'azure.cosmos' namespace. To do that, 'azure.cosmos' needed to be updated to support being a namespace package
# See https://packaging.python.org/en/latest/guides/packaging-namespace-packages/#legacy-namespace-packages
module-name = "azure_cosmoscx._azure_cosmoscx"

# The path to the crate to build
manifest-path = "../engine/Cargo.toml"

# Specifies the features to use when building the rust driver
features = ["python"] 
