[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "azure-cosmoscx"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
# TODO: Move this in to the 'azure.cosmos' namespace. To do that, 'azure.cosmos' needed to be updated to support being a namespace package
# See https://packaging.python.org/en/latest/guides/packaging-namespace-packages/#legacy-namespace-packages
module-name = "azure_cosmoscx._azure_cosmoscx"

# Leaves the Python symbols unresolved, so this module can also be used with statically linked interpreters.
features = [ "pyo3/extension-module" ]

[tool.poetry]
version = "0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.dependencies]
azure-cosmos = {path = "../../azure-sdk-for-python/sdk/cosmos/azure-cosmos", develop = true}
