[package]
name = "query-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
azure_core.workspace = true
azure_data_cosmos = { workspace = true, features = ["key_auth"] }
azure_data_cosmos_engine.workspace = true
azure_identity.workspace = true
futures.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true
reqwest = "0.12.15"
