[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
azure_data_cosmos_engine = { workspace = true, features = ["query_engine"] }
criterion = { workspace = true, features = ["html_reports"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[[bench]]
name = "throughput"
harness = false
